# AliceO2

./: .clang-format  .gitignore
Common/Utils/: CMakeLists.txt
Common/Utils/include/CommonUtils/: BoostSerializer.h
Common/Utils/test/: testBoostSerializer.cxx
DataFormats/Detectors/MUON/MID/: CMakeLists.txt
DataFormats/Detectors/MUON/MID/include/DataFormatsMID/: ColumnData.h  StripCounter.h  StripPattern.h
Detectors/MUON/: CMakeLists.txt  Untitled Diagram.xml
Detectors/MUON/MID/: CMakeLists.txt
Detectors/MUON/MID/Base/: CMakeLists.txt
Detectors/MUON/MID/Base/include/MIDBase/: Chrono.h  DPLSerializer.h  DataStructs.h  Deserializer.h  Enums.h  FilteringMapping.h  FilteringSerializer.h  Mapping_old.h  (+2 more)
Detectors/MUON/MID/Base/src/: Deserializer.cxx  FilteringMapping.cxx  FilteringSerializer.cxx  LegacyUtility.cxx  Mapping.cxx  Mapping_old.cxx  OccupancyMapping.cxx  Serializer_old.cxx
Detectors/MUON/MID/Base/test/: testChrono.cxx  testDeserializer.cxx
Detectors/MUON/MID/Clustering/: CMakeLists.txt
Detectors/MUON/MID/Clustering/src/: ClusterizerDeviceDPL.cxx
Detectors/MUON/MID/Clustering/test/: bench_Clusterizer.cxx
Detectors/MUON/MID/Filtering/: CMakeLists.txt  MIDFiltering_diagram.xml
Detectors/MUON/MID/Filtering/DPL/: CMakeLists.txt  FilteringChainDPL.cxx  FilteringChainDPL.h  MIDFilteringDPL.cxx  MIDFilteringDPL.h
Detectors/MUON/MID/Filtering/config/: runBroadcaster.json  runMIDFilterDevice.json  runMIDRatesComputerDevice.json
Detectors/MUON/MID/Filtering/include/: MIDRatesComputerAlgorithm.h  MIDRatesComputerDevice.h
Detectors/MUON/MID/Filtering/include/MIDFiltering/: Decoder.h  DecoderDeviceDPL.h  Filter.h  FilterDeviceDPL.h  HitCounter.h  HitCounterDeviceDPL.h  MaskGenerator.h  MaskGeneratorDeviceDPL.h
Detectors/MUON/MID/Filtering/src/: Broadcaster.cxx  Broadcaster.h  Decoder.cxx  Decoder.h  DecoderDeviceDPL.cxx  Filter.cxx  Filter.h  FilterDeviceDPL.cxx  FilteringChainDPL.cxx  FilteringChainDPL.h  HitCounter.cxx  HitCounter.h  HitCounterDeviceDPL.cxx  MIDFilterAlgorithm.cxx  MIDFilterAlgorithm.h  MIDFilterDevice.cxx  MIDFilterDevice.h  MIDMaskGeneratorAlgorithm.cxx  MIDMaskGeneratorAlgorithm.h  MIDMaskGeneratorDevice.cxx  MIDMaskGeneratorDevice.h  MIDRatesComputerAlgorithm.cxx  MIDRatesComputerAlgorithm.h  MIDRatesComputerDevice.cxx  MIDRatesComputerDevice.h  MaskGenerator.cxx  MaskGenerator.h  MaskGeneratorDeviceDPL.cxx  runBroadcaster.cxx  runFilteringChain.sh  runMIDFilterDevice.cxx  runMIDMaskGeneratorDevice.cxx  runMIDRatesComputerDevice.cxx  test_FilteringChainDPL.cxx
Detectors/MUON/MID/Filtering/test/: CMakeLists.txt  testFilter.cxx  testHitCounter.cxx  testMaskGenerator.cxx
Detectors/MUON/MID/Simulation/: CMakeLists.txt
Detectors/MUON/MID/Simulation/src/: ChamberHV.cxx  ChamberResponse.cxx  ChamberResponseParams.cxx  Digitizer.cxx
Detectors/MUON/MID/Simulation/test/: CMakeLists.txt  testSimulation.cxx
Detectors/MUON/MID/Tracking/: CMakeLists.txt
Detectors/MUON/MID/Tracking/src/: TrackerDeviceDPL.cxx
Detectors/MUON/MID/Tracking/test/: bench_Tracker.cxx
Detectors/MUON/MID/Workflow/: CMakeLists.txt
Detectors/MUON/MID/Workflow/src/: ClusterizerSpec.cxx  ClusterizerSpec.h  ColdataStreamerSpec.cxx  ColdataStreamerSpec.h  DecoderSpec.cxx  DecoderSpec.h  FilterSpec.cxx  FilterSpec.h  HitCounterSpec.cxx  HitCounterSpec.h  MIDWorkflow.cxx  MaskGeneratorSpec.cxx  MaskGeneratorSpec.h  SinkSpec.cxx  SinkSpec.h  TrackerSpec.cxx  TrackerSpec.h
Detectors/MUON/base/: CMakeLists.txt
Detectors/MUON/base/include/MUONBase/: Broadcaster.cxx  Broadcaster.h  Chrono.h  DataStructs.h  Deserializer.cxx  Deserializer.h  Enums.h  Mapping.h  OccupancyMapping.cxx  OccupancyMapping.h  Serializer.h
Detectors/MUON/base/src/: Deserializer.cxx  Mapping.cxx  OccupancyMapping.cxx  Serializer.cxx
Detectors/MUON/base/test/: CMakeLists.txt  testChrono.cxx  testDeserializer.cxx
Detectors/MUON/monitoring/: CMakeLists.txt
Detectors/MUON/monitoring/include/MUONMonitoring/: MIDMonitor.h
Detectors/MUON/monitoring/src/: MIDMonitor.cxx
Detectors/MUON/reconstruction/: CMakeLists.txt  README.md
Detectors/MUON/reconstruction/include/MUONReconstruction/: Broadcaster.h  MIDFilter.h  MIDFilterAlgorithm.cxx  MIDFilterAlgorithm.h  MIDFilterDevice.h  MIDMaskGenerator.h  MIDMaskGeneratorAlgorithm.cxx  MIDMaskGeneratorAlgorithm.h  MIDMaskGeneratorDevice.h  MIDRatesComputer.h  MIDRatesComputerAlgo.h  MIDRatesComputerAlgorithm.h  MIDRatesComputerDevice.h  MIDclustering.h  MIDoccupancy.h
Detectors/MUON/reconstruction/src/: Broadcaster.cxx  FilteringRC.sh  MIDFilter.cxx  MIDFilterAlgorithm.cxx  MIDFilterDevice.cxx  MIDMaskGenerator.cxx  MIDMaskGeneratorAlgorithm.cxx  MIDMaskGeneratorDevice.cxx  MIDRatesComputer.cxx  MIDRatesComputerAlgo.cxx  MIDRatesComputerAlgorithm.cxx  MIDRatesComputerDevice.cxx  MIDclustering.cxx  MIDoccupancy.cxx  runBroadcaster.cxx  runFilteringChain.sh  runMIDFilter.cxx  runMIDFilter.json  runMIDFilterDevice.json  runMIDMaskGenerator.cxx  runMIDMaskGenerator.json  runMIDMaskGeneratorDevice.json  runMIDRatesComputer.cxx  runMIDRatesComputer.json  runMIDRatesComputerDevice.cxx  runMIDRatesComputerDevice.json  runMIDclustering.cxx  runMIDclustering.json  runMIDoccupancy.cxx  runMIDoccupancy.json
Framework/Core/: CMakeLists.txt
Framework/Core/include/Framework/: ContextRegistry.h  DPLBoostSerializer.h  DataAllocator.h  DataProcessingDevice.h  DataProcessor.h  DataSourceDevice.h  InputRecord.h  MessageContext.h  ProtoContext.h  RawBufferContext.h  RootObjectContext.h  SerializationMethods.h  StringContext.h
Framework/Core/src/: DataProcessingDevice.cxx  DataProcessor.cxx  DataSourceDevice.cxx
Framework/Core/test/: test_BoostSerializedProcessing.cxx
Framework/Utils/: CMakeLists.txt
Framework/Utils/include/Utils/: Utils.h
Framework/Utils/src/: DPLBroadcaster.cxx  DPLGatherer.cxx  DPLRouter.cxx  DPLSplitter.cxx
Framework/Utils/test/: DPLBroadcasterGatherer.cxx  DPLBroadcasterGatherer.h  DPLOutputTest.cxx  DPLOutputTest.h  DplOutputTest.cxx  test_DPLBroadcasterGatherer.cxx  test_DPLOutputTest.cxx
cmake/: O2Dependencies.cmake
(+6 files in other folders)
